# jinja-components

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  tag.yml
jinja_components/: __init__.py  django.py  extension.py  registry.py  tags.py
tests/: conftest.py  settings.py  test_django.py  test_registry.py  test_render.py  test_setup.py  test_slots.py  test_tags.py
