[project]
name = "jinja-components"
version = "0.1.0a1"
description = "A small, class-based component system for Jinja2 with HTML-tag syntax and Vue-style slots."
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
keywords = ["jinja2", "jinja", "components", "templates", "html", "slots"]
authors = [{ name = "Oliver Haas", email = "ohaas@e1plus.de" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 6.0",
  "Framework :: Flask",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = ["jinja2>=3.1", "markupsafe>=2.0"]

[project.optional-dependencies]
django = ["django>=6.0"]

[project.urls]
Homepage = "https://github.com/oliverhaas/jinja-components"
Repository = "https://github.com/oliverhaas/jinja-components.git"

[dependency-groups]
dev = [
  "django>=6.0",
  "pre-commit==4.6.0",
  "pytest==9.1.0",
  "pytest-cov==7.1.0",
  "pytest-django==4.12.0",
  "pytest-xdist==3.8.0",
  "ruff==0.15.18",
  "ty==0.0.51",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jinja_components"]

[tool.hatch.build.targets.sdist]
include = ["jinja_components", "CHANGELOG.md", "LICENSE", "README.md"]

[tool.ruff]
target-version = "py314"
line-length = 120
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN401", "COM812", "D", "E501", "EM", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "A002",
  "ANN",
  "ARG",
  "F841",
  "FBT",
  "PLR2004",
  "PT006",
  "PT011",
  "PT013",
  "PT018",
  "S101",
  "S105",
]

[tool.ty.environment]
python-version = "3.14"

[[tool.ty.overrides]]
include = ["tests/**"]
[tool.ty.overrides.rules]
invalid-assignment = "ignore"
invalid-method-override = "ignore"
unresolved-attribute = "ignore"

[tool.pytest.ini_options]
addopts = "--cov=jinja_components --cov-report=term-missing --cov-report=xml --no-cov-on-fail"
testpaths = ["tests"]
xfail_strict = true
DJANGO_SETTINGS_MODULE = "settings"
pythonpath = ["tests"]
markers = ["unit: fast, isolated unit tests"]

[tool.coverage.run]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
precision = 2
skip_covered = true
